# course_work_4

./: README.md  pyproject.toml
helper/: hh_dict_helper_for_course_4.docx  hh_responses.py  sj_and_hh_responses.py  sj_dict_helper_for_course_4.docx  sj_responses.py
hh_vacancies/: README.md
src/: abstract_classes.py  get_vacancies.py  storage_vac.py  vacancies.py
utils/: menu.json  utils.py
vacancies/: README.md  main.py
