[tool.poetry]
name = "course-work-4"
version = "0.1.0"
description = ""
authors = ["Mkupr <mkupr@outlook.com>"]
readme = "README.md"
packages = [{include = "course_work_4"}]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.2"
benedict = "^0.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"